fixed misalignment

--- a/front-end/src/Components/UserPost.css
+++ b/front-end/src/Components/UserPost.css
@@ -22,6 +22,8 @@
     display: flex;
     width: 100%;
     height: auto;
+    margin-left: 0;
+    margin-right:0; 
     object-fit: cover;
   }
   
@@ -63,11 +65,4 @@
     margin-right: 50px;
     margin-bottom: 0;
   }
-  @media (max-width: 767px) {
-    .post-image {
-    margin-left: 0; /* reset the margin to 0 */
-    margin-right: 0;
-    }
-    }
-
   
